# credara

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REPO_STRUCTURE.md  SECURITY.md  anchor  creda  credara-reference-architecture.html
.devcontainer/: Dockerfile  bridge.Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  open_question.yml  spec_question.yml
.github/workflows/: ci-conformance.yml  ci-docs.yml  ci-java.yml  ci-rust.yml  dco.yml  gitleaks.yml  labels.yml  pages.yml
bridge/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bridge/src/main/resources/: application.yml
clients/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  e2e.Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
clients/e2e/: audit.spec.ts  clinician.spec.ts  landing.spec.ts  patient.spec.ts  prior-auth.spec.ts  steward.spec.ts
clients/mockups/: compliance-audit-mockup.html  patient-consent-mockup.html  peer-operator-console-mockup.html  personas.md  prior-auth-mockup.html  steward-console-mockup.html
clients/src/: App.tsx  Landing.tsx  main.tsx
clients/src/audit/: AuditApp.tsx  audit.css  fixtures.ts
clients/src/clinician/: ClinicianApp.tsx  PatientDetailPage.tsx  WorklistPage.tsx  clinician.css  consent.ts  fixtures.ts  project.ts  state.tsx
clients/src/patient/: PatientApp.tsx  patient.css  seed.ts
clients/src/prior-auth/: PriorAuthApp.tsx  orders.ts  prior-auth.css
clients/src/shared/components/: AppShell.tsx  Badge.tsx  CodeCard.tsx  ConfidenceMeter.tsx  DemoData.tsx  EventDag.tsx  Modal.tsx  Section.tsx  SlideOver.tsx  Toast.tsx
clients/src/shared/fhir/: client.ts  types.ts
clients/src/shared/lib/: format.ts
clients/src/shared/mock/: bridge.ts
clients/src/steward/: StewardApp.tsx  fixtures.ts  steward.css
clients/src/styles/: globals.css  tokens.css
conformance/: Cargo.toml  README.md  run.sh
conformance/src/: filter.rs  generator.rs  lib.rs
conformance/tests/: conformance.rs
crates/creda-core/: Cargo.toml  README.md  build.rs
crates/creda-core/proto/: creda.proto
crates/creda-core/src/: config.rs  engine.rs  error.rs  grpc.rs  health.rs  lib.rs  main.rs  metrics.rs  registry.rs  replication.rs  signer.rs
crates/creda-core/tests/: engine.rs  tombstone.rs
crates/creda-events/: Cargo.toml  README.md
crates/creda-events/src/: canonical.rs  crypto.rs  demographics.rs  error.rs  event.rs  hash.rs  ids.rs  lib.rs  payload.rs
crates/creda-events/src/crypto/: pqc.rs
crates/creda-events/tests/: roundtrip.rs  signatures.rs  tombstone_husk.rs  validation.rs
crates/creda-events/tests/common/: mod.rs
crates/creda-export-gate/: Cargo.toml  README.md
crates/creda-export-gate/src/: error.rs  gate.rs  lib.rs
crates/creda-export-gate/tests/: gate.rs
crates/creda-graph/: Cargo.toml  README.md
crates/creda-graph/src/: authorization.rs  confidence.rs  error.rs  identity.rs  lib.rs  link_chain.rs  subgraph.rs  validation.rs
crates/creda-graph/tests/: graph.rs
crates/creda-net/: Cargo.toml  README.md
crates/creda-net/src/: antientropy.rs  bucketing.rs  error.rs  gossip.rs  lib.rs  libp2p_adapter.rs  snapshot.rs  transport.rs  util.rs
crates/creda-net/tests/: snapshot.rs  wire_contract.rs
crates/creda-store/: Cargo.toml  README.md
crates/creda-store/src/: error.rs  git.rs  lib.rs  memory.rs  rocks.rs  store.rs  tokens.rs
crates/creda-store/tests/: store_contract.rs
crates/creda-verifier/: Cargo.toml  README.md
crates/creda-verifier/src/: error.rs  lib.rs  staleness.rs  verifier.rs
crates/creda-verifier/tests/: verifier.rs
deploy/: README.md
deploy/ansible/: README.md  deploy.yml  inventory.example.ini  requirements.yml
deploy/ansible/group_vars/: all.example.yml
deploy/compose/: docker-compose.yml
deploy/docker/: bridge.Dockerfile  core.Dockerfile
deploy/helm/creda/: Chart.yaml  values.yaml
deploy/helm/creda/templates/: _helpers.tpl  configmap.yaml  cronjob-snapshot.yaml  networkpolicy.yaml  rbac.yaml  (+3 more)
design/: clinician-review-mockup.html  compliance-audit-mockup.html  creda-reference-architecture.html  credara-reference-architecture.html  patient-consent-mockup.html  personas.md  prior-auth-mockup.html  reference-architecture.html  steward-console-mockup.html
docs/: COWORK_BUILD_GUIDE.md  COWORK_CONTEXT.md  DESIGN_QUEUE.md  DEVELOPMENT.md  E2E.md  GITHUB_SETUP.md  HANDOFF.md  HOW_TO_TEST.md  LAUNCH_CHECKLIST.md  PILOT.md  STATUS.md  creda-technical-spec.md  credara-technical-spec.md  dht-query-privacy.md  matching-calibration.md  staleness-policy.md  storage-substrate.md  tombstone-integrity-review.md
scripts/: ci-local.sh
site/: CNAME  index.html
testbed/: .gitattributes  .gitignore  Makefile  README.md
testbed/compose/: README.md
testbed/helm/: values-peer-a.yaml  values-peer-b.yaml  values-uat-peer.yaml
testbed/helm/clients/: Chart.yaml  values.yaml
testbed/images/: bridge.Dockerfile  build-and-load.sh  core.Dockerfile  peer-driver.Dockerfile
testbed/kind/: README.md  cluster.yaml  down.sh  up.sh
testbed/scenarios/: README.md
testbed/scenarios/anti-entropy-repair/: README.md  run.sh
testbed/scenarios/gossip-convergence/: README.md  run.sh
testbed/scenarios/partition-rejoin/: README.md  run.sh
testbed/scenarios/revocation-latency/: README.md  run.sh
testbed/scenarios/rogue-link/: README.md  run.sh
testbed/scenarios/rolling-upgrade/: README.md  run.sh
testbed/scenarios/storage-class/: README.md  run.sh
testbed/scenarios/ui-smoke/: README.md  run.sh
testbed/scripts/: peer-multiaddr.sh  port-forward.sh  reset-uat.sh  seed-demo.sh  ui-down-real.sh  ui-down.sh  ui-forward.sh  ui-up-real.sh  ui-up.sh  wait-ready.sh
testbed/tools/peer-driver/: Cargo.toml  build.rs
testbed/tools/peer-driver/src/: main.rs
tools/: README.md  anchor-run.sh
(+26 files in other folders)
