# Creda Rust workspace.
# Members are added per milestone. See REPO_STRUCTURE.md.
[workspace]
resolver = "2"
members = [
    "crates/creda-events", # M1 — event model (spec §3, §4, §5)
    "crates/creda-store",  # M2 — storage layer (spec §5.2, §7.3)
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/REPLACE_ME/creda"
authors = ["The Creda Authors"]

# Shared dependency versions are declared here as crates are added (M1+),
# e.g. ciborium, blake3, uuid, ed25519-dalek, pqcrypto-*, tokio, tonic.
[workspace.dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
